<resources>
    <string name="app_name">李氏农场</string>
    <string name="main_et_tel">请输入手机号</string>
    <string name="main_et_code">请输入验证码</string>
    <string name="main_btn_getCode">获取验证码</string>
    <string name="main_btn_login">登录</string>
    <string name="main_tv_help">帮助</string>
    <string name="main_tv_privacy">隐私</string>
    <string name="main_tv_terms">条款</string>

    <string-array name="home_activity_indicator">
        <item>亲子活动</item>
        <item>旅游</item>
    </string-array>
    <string name="home_et_inputgoods">输入商品</string>
    <string name="home_btn_search">搜索</string>
    <string name="home_tv_farm">开心农场</string>
    <string name="home_tv_discount">优惠活动</string>
    <string name="home_tv_announcement_title">
        通知：4号土地可以开始租赁了！！
    </string>
    <string name="home_tv_announcement_text">
        4号土地共100平方米，土质肥沃，适合种植玉米，大豆，红薯等农作物，先到先得，速来抢购吧！
    </string>
    <string name="farm_tv_land">我的土地</string>
    <string name="farm_tv_announcement">
        欢迎来到开心农场！&#10;
        在这里你可以租赁我们的土地进行耕种。&#10;
        租赁模式介绍：&#10;
        （1）无托管&#10;
        （2）半托管&#10;
        （3）全托管&#10;
    </string>


    <string name="shop_buy">立即购买</string>
    <string name="shop_num">已选数量</string>
    <string name="customName">收货人姓名：</string>
    <string name="customPhoneNumber">收货人电话：</string>
    <string name="customAddress">收货人地址：</string>
    <string name="pay">确认支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="wx_pay">微信支付</string>

    <string name="user_et_search">搜索订单或班车路线</string>
    <string name="user_order">我的订单</string>
    <string name="user_farmland">我的农场</string>
    <string name="user_bus">班车预定</string>
    <string name="user_info_title">个人资料</string>
    <string name="tab_home">主页</string>
    <string name="tab_bus">班车</string>
    <string name="tab_user_center">我的</string>
    <string name="tab_shop">商城</string>
    <string name="tab_activity">活动</string>
    <string name="home_tv_recommend">猜你喜欢</string>
    <string name="home_tv_activity">精选活动</string>
    <string name="tips_text_network_error">网络出错，请点击重试...</string>
    <string name="text_farm_activity_introduction">亲身参观开心农场，体验农场美景。不仅可以享受线下 签约开心农场的优惠，还可以亲自为自己的农田挑选播 种的种子以及农具，体会播种的乐趣。推广期内可来此 预约免费的农场参观，李氏农场欢迎您</string>
    <string name="text_farm_activity_actSite">联系地址：北京市房山区城关街道田各庄村东</string>
    <string name="text_farm_acticity_introdution_title">- - - - - - 活动介绍 - - - - - -</string>
    <string name="tips_add_visitor_name_et">请输入真实姓名</string>
    <string name="tips_add_visitor_id_et">用于身份校验，请准确填写</string>
    <string name="title_farmland">租赁介绍</string>
    <string name="text_farmland_lease_btn">我要租地</string>
    <string name="text_farmland_mine_btn">已有土地</string>
    <string name="title_select_farmland">选择土地</string>
    <string name="title_lease_mode">租赁模式</string>
    <string name="orderNum">订单</string>
    <string name="landNum">土地</string>
    <string name="integerNum">积分</string>
    <string name="order">我的订单</string>
    <string name="integer">我的积分</string>
    <string name="comorder">商品订单</string>
    <string name="actorder">活动订单</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="showQrcode">查看详情</string>
    <string name="tips_lease_mode_1">无托管：仅提供土地租赁服务，涉及种植的其余操作需自己完成</string>
    <string name="tips_lease_mode_2">全托管：除了提供土地租赁服务外，还可以付费对部分种植操作进行托管</string>
    <string name="beijing">北京市</string>
    <string name="exit">退出登录</string>

    <string-array name="lease_mode">
        <item>无托管</item>
        <item>全托管</item>
    </string-array>


</resources>
