<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--轮播图-->

<!--    活动-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_tv_activity"
        style="@style/textviewstyle_title"
        android:background="@drawable/shape_underline"/>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/home_activity_indicator"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/home_activity_viewpager"
        android:layout_width="match_parent"
        android:layout_height="100dp"/>

<!--    开心农场-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_tv_farm"
        style="@style/textviewstyle_title"
        android:background="@drawable/shape_underline"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:background="@drawable/shape_home_farm_announcement">
        <TextView
            android:id="@+id/home_tv_farm_announcement_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/home_tv_announcement_title"
            />
        <TextView
            android:id="@+id/home_tv_farm_announcement_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/home_tv_announcement_text"
            />
    </LinearLayout>



</LinearLayout>