<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    >

    <ImageView
        android:id="@+id/main_iv_logo"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:src="@mipmap/applogo_02"
        android:scaleType="centerInside"/>
    <EditText
        android:id="@+id/main_et_telnumber"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/main_iv_logo"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="19dp"
        android:layout_marginRight="21dp"
        android:background="@drawable/shape_main_ev"
        android:drawableLeft="@drawable/ic_main_phone"
        android:gravity="center_vertical"
        android:hint="@string/main_et_tel"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:textColor="#D9D9D9"
        android:textSize="14dp" />
    <EditText
        android:id="@+id/main_et_pwdcode"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_below="@id/main_et_telnumber"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/shape_main_ev"
        android:drawableLeft="@drawable/ic_main_mail"
        android:gravity="center_vertical"
        android:hint="@string/main_et_code"
        android:paddingLeft="20dp"
        android:textColor="@color/grey_BBBBBB"
        android:textSize="14dp" />
    <Button
        android:id="@+id/main_btn_getcode"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_below="@id/main_et_telnumber"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="19dp"
        android:layout_marginRight="22dp"
        android:layout_toRightOf="@id/main_et_pwdcode"
        android:background="@drawable/shape_main_btn"
        android:text="@string/main_btn_getcode"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:onClick="onClick"/>
    <Button
        android:id="@+id/main_btn_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/main_et_pwdcode"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="19dp"
        android:layout_marginRight="22dp"
        android:background="@drawable/shape_main_btn"
        android:text="@string/main_btn_login"
        android:textColor="#fbfbfb"
        android:textSize="20dp"
        android:onClick="onClick" />
    <TextView
        android:id="@+id/main_tv_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@id/main_tv_privacy"
        android:text="@string/main_tv_help"
        android:textColor="#87888a" />
    <TextView
        android:id="@+id/main_tv_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/main_tv_privacy"
        android:textColor="#87888a" />
    <TextView
        android:id="@+id/main_tv_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/main_tv_privacy"
        android:text="@string/main_tv_terms"
        android:textColor="#87888a" />

</RelativeLayout>