<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/user_background"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/personCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/user_card"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp">

                        <ImageView
                            android:id="@+id/userIcon"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginLeft="30dp"
                            android:src="@drawable/alipay" />

                        <TextView
                            android:id="@+id/userName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:text="此处为姓名"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/orderNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="订单数量"
                            android:textColor="@color/black"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/orderNum"></TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/landNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="土地数量"
                            android:textColor="@color/black"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/landNum"></TextView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/integralNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="积分数量"
                            android:textColor="@color/black"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/integerNum"></TextView>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/orderButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/order"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/right" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <RelativeLayout
                    android:id="@+id/landButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/user_farmland"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/right" />

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <RelativeLayout
                    android:id="@+id/integerButton"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp"
                        android:text="@string/integer"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/right" />

                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/logout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="200dp"
                android:background="@drawable/exit_button"
                android:text="@string/exit"
                android:textColor="@color/white" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>