<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PayOrder">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/payToolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:title="开心收银台"
        app:titleTextColor="@color/white"></androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payToolBar"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="20dp"
            android:text="此处为价格"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/myrect"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/alipay"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/alipay"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/alipay"
                    android:paddingLeft="10dp"
                    android:text="@string/alipay"
                    android:textColor="@color/black"
                    android:textSize="15sp"></TextView>

                <RadioButton
                    android:id="@+id/alipay_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:checked="true"></RadioButton>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/alipay"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/wxpay"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/alipay"
                    android:paddingLeft="10dp"
                    android:text="@string/wx_pay"
                    android:textColor="@color/black"
                    android:textSize="15sp"></TextView>

                <RadioButton
                    android:id="@+id/wx_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"></RadioButton>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/OrderPay"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/pay"
        android:textColor="@color/white"
        android:textSize="25sp"></Button>
</RelativeLayout>