<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolor"
    android:orientation="vertical">

    <TextView
        android:id="@id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/maincolor"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="活动详情"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:background="@drawable/shape_rounded_corners_without_shadows">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/actName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="活动标题"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tips_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/actName"
                android:layout_marginLeft="10dp"
                android:text="需预约|不可退"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/actPreview"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/tips_order"
                android:layout_margin="10dp"
                android:scaleType="fitXY"
                android:src="@mipmap/test" />

            <TextView
                android:id="@+id/tips_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/actPreview"
                android:gravity="center"
                android:text="@string/text_farm_acticity_introdution_title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/actDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tips_introduction"
                android:layout_margin="10dp"
                android:text="@string/text_farm_activity_introduction" />

            <TextView
                android:id="@+id/actSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/actDescription"
                android:layout_margin="10dp"
                android:text="@string/text_farm_activity_actSite" />

            <LinearLayout
                android:id="@+id/actIcon_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/actSite"
                android:layout_alignParentBottom="true"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical" />
        </RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/actPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="0￥"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <Button
            android:id="@+id/order_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_main_btn"
            android:text="预定"
            android:textColorHint="@color/black" />

    </RelativeLayout>

</RelativeLayout>